Les 1 verder uitgewerkt

--- a/les-1/1.md
+++ b/les-1/1.md
@@ -11,7 +11,7 @@ nav_exclude: true
 Je gaat de programmeertaal PHP downloaden en installeren op je computer.
 Ook installeer je meteen een web en een database server.
 
-Let op, dit werkt anders op Windows en Mac!
+Let op, dit werkt net iets anders op Windows en Mac, kijk de juiste video!
 
 ## Windows installatie
 
@@ -19,11 +19,17 @@ Let op, dit werkt anders op Windows en Mac!
 - Installeer XAMPP
 - (De XAMPP Developer Files hoef je niet te installeren)
 
+{% include youtube.md video="uW9S4qSPB8Q" title="Windows XAMPP installatie" %}
+
+---
+
 ## Mac installatie
 
 - Download de XAMPP installer via [deze link](https://sourceforge.net/projects/xampp/files/XAMPP%20Mac%20OS%20X/8.1.1/xampp-osx-8.1.1-2-installer.dmg/download#) (wacht paar seconden voor download begint)
 - Dubbelklik de installer en installeer XAMPP (wachtwoord invullen als dat nodig is)
 - (De XAMPP Developer Files hoef je niet te installeren)
+
+{% include youtube.md video="4L82xht_ulk" title="Mac XAMPP installatie" %}
 
 ---
 
@@ -31,7 +37,7 @@ Let op, dit werkt anders op Windows en Mac!
 {: .text-blue-100 .fs-6 }
 
 - Start na de installatie XAMPP op en start de Apache Web Server
-- Zoek dan de knop in het XAMPP control panel om de homepage / application te openen
-- Open in je webbrowser de homepage van je nieuwe webserver
+- Zoek de knop in het XAMPP control panel om de homepage / application te openen.
+- Dit opent de start pagina je nieuwe webserver (waar ook PHP bij zit en een database)
 - Zoek de PHP Info pagina in het menu en maak een screenshot. 
-- Zet de screenshot in de map: `opdracht-1`
+- Zet dit screenshot in de repository.
