--- a/les-1/3.md
+++ b/les-1/3.md
@@ -10,8 +10,9 @@ nav_exclude: true
 
 - De bestandsextensie voor PHP is `.php` (met kleine letters!)  
 - Een PHP webpagina kun je ALLEEN uitvoeren via een webserver 
-- Als de webserver een bestand met `.php` ziet wordt deze naar de PHP engine gestuurd.
-- De uitvoer van het PHP script wordt de code van je PHP pagina
+- Als de webserver een bestand met `.php` ziet wordt deze door PHP engine uitgevoerd.
+- De uitvoer van het PHP script wordt daarna code van je webpagina
+- Zo kun je dus gegevens verwerken of genereren op de server en het resultaat naar de webbrowser sturen
 
 
 ## PHP code schrijven
@@ -35,21 +36,8 @@ Open een terminal venster in de map met `hello.php` en voer dit commando uit:
 ## Nu zelf proberen
 
 - Maak een nieuw PHP script: `its-me.php`.
-- Schrijf nu zelf PHP code en gebruik `echo` om je naam, klas en je studentnummer op het scherm te zetten.
+- Schrijf nu zelf PHP-code en gebruik `echo` om je naam, klas en je studentnummer op het scherm te zetten.
 - Voer het script uit (zie boven hoe je dat doet)
 - Maak een screenshot van de output en zet deze in de map.
 
-PHP en HTML kun je samen gebruiken. Dat maakt het heel krachtig omdat je zo dynamische code (PHP) kunt mixen 
-met gewone HTML-code.
-
-```php
-<!doctype html>
-<head>
-<title><?php echo "Titel van de pagina" ?></title>
-</head>
-<body>
-    <h2>De datum vandaag is: <?php echo date('d-m-Y')?>, en de tijd is <?php echo date("H:i")?> uur. 
-</body>
-</html>
-```
 
