--- a/les-1/5.md
+++ b/les-1/5.md
@@ -8,13 +8,13 @@ nav_exclude: true
 
 # 05 - De PHP Documentatie lezen en gebruiken
 
-De officiele website voor PHP is [https://www.php.net/](https://www.php.net/)
-Daar vind je alle (technische) documentatie van PHP.
-Dat is nogal droog en saai, maar je moet er wel mee leren werken en leren om het te lezen, om informatie op de zoeken over de mogelijkheden van PHP.
+De officiële documentatie voor PHP vind je op [https://www.php.net/](https://www.php.net/)\
+Daar vind je alle (technische) documentatie van PHP.\
+Dat is nogal droog en saai, maar geeft je ALLE informatie over de ingebouwde functions en variabelen van PHP.
 
-Maar je kunt er wel alle ingebouwde functies en mogelijkheden terugvinden.
+**Gebruik de documentatie als je wilt weten hoe je een bepaalde function gebruikt!** 
 
-## Opdracht
+## Documentatie lezen
 
 Zoek in de [documentatie van PHP](https://www.php.net/manual/en/) naar onderstaande functions (rechtsbovenin kun je zoeken):
 
@@ -22,18 +22,42 @@ Zoek in de [documentatie van PHP](https://www.php.net/manual/en/) naar onderstaa
 - strpos
 - file_exists
 
-### Lees de documentatie voor de functions
+### Wat doen de functions?
 
-Zet onderaan DIT document per function:
+Maak een document `functions.md`, maak voor elke function een kopje en schrijf er onder:
 
-- Wat deze function doet?
-- Welke input parameters deze function verwacht
-- Welk type data (string, int, boolean...?) verwacht deze function?
-- Welk type indata fomratie geeft deze function terug als return waarde?
+- Wat de function doet? Waar heb je hem voor nodig?
+- Welke parameters deze function heeft (dit kun je lezen bovenaan de pagina van de function)
+- Van welk type gegeven (string, int, boolean...?) zijn deze parameters? (dit zie je onder **Parameters**)
+- Welk type gegeven geeft deze function terug als return waarde? (dit zie je onder **Return Values**)
 
-Schrijf een PHP script waar je deze function gebruikt.
+### De functions gebruiken
 
-Tip: Je mag een voorbeeld gebruiken die vaak onderaan de documentatie staat (of gebruik Google om een voorbeeld te vinden)
+- Maak nu een nieuw bestand `functions.php`
+- Schrijf PHP-code te schrijven waarin je de function gebruikt (vergeet de start- en eind PHP tags niet!)
+- Zorg dat de function iets op het scherm zet met `echo`
+
+### Voorbeeld:
+
+Bijvoorbeeld voor de function [strlen()](https://www.php.net/manual/en/function.strlen.php){: target="_blank" }
+
+```php
+<?php
+    // strlen() geeft de lengte van een string terug
+    $naam = "Duurzaam Huis"; 
+    $lengte = strlen($naam);
+    echo "De lengte  " . $naam . " is: " . $lengte;
+?>
+```
+
+Tip: Je mag een voorbeeld gebruiken die vaak onderaan de documentatie staan (of [gebruik Google](https://lmgtfy.app/?q=php+strpos+example) om een voorbeeld te vinden: )
+
+Vraag het bestand `functions.php` op via localhost en kijk of het werkt.
 
 ---
-` Hier jouw antwoorden`
+
+Heb je de smaak te pakken?
+Probeer dan meer String functions uit: https://www.php.net/manual/en/ref.strings.php
+
+
+
