--- a/les-1/6.md
+++ b/les-1/6.md
@@ -8,17 +8,15 @@ nav_exclude: true
 
 # 06 - Meld je aan bij Linkedin Learning
 
-Een belangrijke eigenschap van een developer is om goede hulpbronnen te hebben.
-Denk aan Google, Youtube channels, Tutorials, maar vooral de officiele documentatie van de technologie die je wilt leren.
+Een belangrijke eigenschap van een goede developer is om de juiste hulpbronnen bij de hand te hebben.
+Denk aan Google, Youtube channels, Tutorials, maar ook de officiële documentatie van de programmeertaal of technologie die je gebruikt
 
 Het Mediacollege geeft alle studenten *gratis toegang* tot LinkedIn Learning.
-In deze periode ga je ook hier wat losse video's van bekijken en opdrachten maken.
-
-Maak nu alvast eeb account bij LinkedIn Learning:
+Maak nu alvast een account bij LinkedIn Learning, zodat je hier zelfstandig aanvullende lessen kunt volgen:
 
 1. Ga naar - [https://www.linkedin.com/learning/login_ent](https://www.linkedin.com/learning/login_ent)
-2. Meld je aan met Mediacollege e-mail adres
-3. Maak een screenshot van je ingelogde scherm bij LinkedIn Learning als bewijs
+2. Meld je aan met je Mediacollege e-mail adres.
+3. Maak een screenshot van je ingelogde scherm bij LinkedIn Learning als bewijs van je registratie.
 
 De komende weken zal ik soms links naar opdrachten of video's van deze cursus geven:
 
