--- a/les-1/7.md
+++ b/les-1/7.md
@@ -9,21 +9,21 @@ nav_exclude: true
 # 07 - Introductie variabelen
 
 Log in bij LinkedIn Learning en kijk deze video:  
-- https://www.linkedin.com/learning/learning-php-4/using-variables
+- [https://www.linkedin.com/learning/learning-php-4/using-variables](https://www.linkedin.com/learning/learning-php-4/using-variables)
 
 ## Maak een aantal variabelen en zet ze op het scherm
 
 Je weet nu hoe je een variabele maakt met PHP en welke verschillende data types er zijn:
 
 1. Maak een bestand `variabelen.php`
-2. Maak eerst een standaard HTML-document structuur.
-3. Open een PHP tag helemaal bovenin je document
-4. Maak nu 5 variabelen en kies de juiste data-types bij de gegevens (kies zelf een duidelijke naam voor de variabele):
-   1. Je naam
-   2. Je woonplaats
-   3. Je leeftijd
-   4. De huidige temperatuur met 1 cijfer achter de komma
-   5. ... verzin meer gegevens als je dat leuk vindt
+2. Maak in het PHP bestand eerst een standaard HTML-document structuur.
+3. Open een PHP tag helemaal bovenaan
+4. Maak nu minstens 4 variabelen en kies de juiste data-types bij de gegevens (kies zelf een duidelijke naam voor de variabele):
+   - Je naam
+   - Je woonplaats
+   - Je leeftijd
+   - De huidige temperatuur met 1 cijfer achter de komma
+   - ... verzin meer gegevens als je dat leuk vindt
 5. Vergeet de `;` niet aan het einde van elke regel PHP.
 6. Sluit de PHP tag.
 7. Maak nu met PHP en HTML een lopende zin waarbij je alle variabelen gebruikt. 
